feature(app): Add Pantry and Recipes pages

--- a/src/components/app-menu/app-menu.html
+++ b/src/components/app-menu/app-menu.html
@@ -1,18 +1,7 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      PantryPal
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-</ion-content>
-
 <ion-footer class="app-tabs">
   <ion-buttons>
     <button ion-button clear (click)="goToPantry()">
-      <img src="" alt="Pantry" height="30" />
+      <img src="assets/icon/pantrypal/pantry.svg" alt="Pantry" height="25" />
       Pantry
     </button>
 
@@ -21,7 +10,7 @@
     </button>
 
     <button ion-button clear (click)="goToRecipes()">
-      <img src="" alt="Recipes" height="30" />
+      <img src="assets/icon/pantrypal/recipes.svg" alt="Recipes" height="25" />
       Recipes
     </button>
   </ion-buttons>
